# source-downloader-rust

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rustfmt.toml
applications/web/: Cargo.toml  build.rs
applications/web/src/: error_handle.rs  lib.rs  main.rs
applications/web/src/app/: router.rs
applications/web/src/component/: router.rs
applications/web/src/dao/: mod.rs  yaml_file.rs
applications/web/src/error/: error_handle.rs  mod.rs
applications/web/src/model/: mod.rs
applications/web/src/path/: router.rs
applications/web/src/processing/: router.rs
applications/web/src/processor/: router.rs
applications/web/src/service/: app.rs  component.rs  error.rs  mod.rs  model.rs  path.rs  processing.rs  processor.rs  router.rs
component-macro/: Cargo.toml
component-macro/src/: lib.rs
core/: Cargo.toml
core/benches/: filter.rs
core/src/: application.rs  component_manager.rs  config.rs  container.rs  core.rs  expression.rs  instance_manager.rs  lib.rs  plugin.rs  processor.rs  processor_manager.rs  source_processor.rs
core/src/components/: expression_file_content_filter.rs  expression_item_filter.rs  fixed_schedule_trigger.rs  http_downloader.rs  mod.rs  source_item_identity_filter.rs  system_file_mover.rs  system_file_resolver.rs  system_file_source.rs
core/src/expression/: cel.rs
core/src/process/: file.rs  mod.rs  rule.rs  variable.rs
core/tests/resources/: config.yaml
plugins/common/: Cargo.toml
plugins/common/src/: lib.rs  util.rs
plugins/common/src/component/: mikan_source.rs  mod.rs
plugins/common/src/components/: mod.rs  test_source.rs
plugins/common/src/instance/: mikan.rs  mod.rs
sdk/: Cargo.toml
sdk/src/: component.rs  instance.rs  lib.rs  plugin.rs  storage.rs
source-downloader-core/: Cargo.toml
source-downloader-core/src/: application.rs  component_manager.rs  config.rs  expression.rs  instance_manager.rs  lib.rs  plugin.rs  processor_manager.rs  processor_test_support.rs  source_processor.rs
source-downloader-core/src/components/: expression_file_content_filter.rs  expression_item_content_filter.rs  expression_item_filter.rs  fixed_schedule_trigger.rs  http_downloader.rs  mod.rs  simple_file_exists_detector.rs  source_item_identity_filter.rs  system_file_mover.rs  system_file_resolver.rs  system_file_source.rs
source-downloader-core/src/expression/: cel.rs
source-downloader-core/src/process/: file.rs  rule.rs  variable.rs
source-downloader-core/tests/: processor_cases.yaml
source-downloader-core/tests/component/: expression_item_filter_test_data.json
source-downloader-core/tests/resources/: config.yaml
source-downloader-sdk/: Cargo.toml
source-downloader-sdk/src/: component.rs  lib.rs  plugin.rs  storage.rs
storage-memory/: Cargo.toml
storage-memory/src/: lib.rs
storage-sqlite/: Cargo.toml
storage-sqlite/migrations/sqlite/: 20251211072353_init.sql
storage-sqlite/src/: lib.rs
