[workspace]
resolver = "3"
members = ["core", "sdk", "applications/web", "plugins/common", "component-macro", "storage-memory", "storage-sqlite"]

[workspace.dependencies]
log = "0.4"
env_logger = "0.11"

serde = { version = "1", features = ["derive", "default"] }
serde_yaml = "0.9"
serde_json = "1"

http = "1"
http-serde = "2"
time = "0.3"
libloading = "0.9"
syn = "2.0"
quote = "1.0"
tempfile = "3.19"
parking_lot = "0.12"
cel = "0.11"
humantime = "2.3.0"
clap = { version = "4", features = ["derive", "env"] }

moka = { version = "0.12.10", features = ["sync"] }
axum = { version = "0.8.3", features = ["macros"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
problem_details = "0.9"
async-trait = "0.1"
tower-http = { version = "0.6" }
futures-util = { version = "0.3", default-features = false }
serde_qs = "1.0.0-rc.3"