[workspace]
resolver = "3"
members = ["source-downloader-core", "source-downloader-sdk", "applications/web", "plugins/common", "component-macro", "storage-memory", "storage-sqlite"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace.dependencies]
log = "0.4"
env_logger = "0.11"

serde = { version = "1", features = ["derive", "default"] }
serde_yaml = "0.9"
serde_json = "1"

http = "1"
http-serde = "2"
time = "0.3"
libloading = "0.9"
syn = "2.0"
quote = "1.0"
tempfile = "3"
parking_lot = "0.12"
cel = "0.12"
humantime = "2.3"
clap = { version = "4", features = ["derive", "env"] }

moka = { version = "0.12", features = ["sync"] }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.4", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2.5"
problem_details = "0.9"
async-trait = "0.1"
tower-http = { version = "0.6" }
futures-util = { version = "0.3", default-features = false }
serde_qs = "1.0.0-rc.3"
retry = "2"
tokio-retry2 = "0.9"
fastmurmur3 = "0.2.0"

rss-for-mikan = "2.0.4-mikan"
reqwest = { version = "0.12", default-features = false }
scraper = "0.25"
indexmap = { version = "2" }
backon = "1.6"
walkdir = "2"
url = "2"
rkyv = { version = "0.8" }
postcard = { version = "1.1", features = ["use-std"] }
zstd = "0.13"
regex = "1.12.2"
criterion = "0.8"
vfs = "0.12"
jsonpath-rust = { version = "1.0.4" }
maplit = "1.0.2"
mockall = "0.14"
derivative = "2.2.0"

# 使用cargo tree -p sea-orm -i sqlx查看sea-orm依赖的版本, 因为不喜欢用sea-orm的migration改用sqlx的方式
sea-orm = { version = "2.0.0-rc.20" }
sqlx = { version = "0.8.6" }