[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
sdk = { path = "../sdk" }
libloading = { workspace = true }
serde_yaml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
moka = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
cel = { workspace = true, features = ["json", "regex"] }
humantime = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async-trait = {workspace = true}

[dev-dependencies]
tempfile = { workspace = true }
storage-memory = { path = "../storage-memory" }
storage-sqlite = { path = "../storage-sqlite" }