[package]
name = "sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
http = { workspace = true }
http-serde = { workspace = true }
time = { workspace = true, features = ["serde", "parsing", "formatting"] }
serde_json = { workspace = true }
serde = { workspace = true }
component-macro = { path = "../component-macro" }
parking_lot = { workspace = true }