[package]
name = "source-downloader-core"
version = "0.1.0"
edition = "2024"

[dependencies]
source-downloader-sdk = { path = "../source-downloader-sdk" }
libloading = { workspace = true }
serde_yaml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
moka = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
cel = { workspace = true, features = ["json", "regex"] }
humantime = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
backon = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
walkdir = { workspace = true }
url = { workspace = true, features = ["std"] }
#rkyv = { workspace = true }
postcard = { workspace = true, features = ["use-std"] }
zstd = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
storage-memory = { path = "../storage-memory" }
storage-sqlite = { path = "../storage-sqlite" }
source-downloader-sdk = { path = "../source-downloader-sdk", features = ["test"] }
maplit = { workspace = true }
criterion = { workspace = true }
vfs = { workspace = true }
jsonpath-rust = { workspace = true }

[[bench]]
name = "filter"
harness = false