[package]
name = "source-downloader-sdk"
version = "0.1.0"
edition = "2024"


[features]
test = []

[dependencies]
http = { workspace = true }
http-serde = { workspace = true }
time = { workspace = true, features = ["serde", "parsing", "formatting", "macros"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
component-macro = { path = "../component-macro" }
parking_lot = { workspace = true, features = ["serde"] }
async-trait = { workspace = true }
fastmurmur3 = { workspace = true }