[package]
name = "web"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "web"
path = "src/main.rs"

[dependencies]
core = { path = "../../core" }
sdk = { path = "../../sdk" }
#storage-sqlite = { path = "../../storage-sqlite" }
common = { path = "../../plugins/common" }
log = { workspace = true }
env_logger = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
parking_lot = { workspace = true }
