[package]
name = "web"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "web"
path = "src/main.rs"

[dependencies]
core = { path = "../../core" }
sdk = { path = "../../sdk" }
storage-sqlite = { path = "../../storage-sqlite" }
storage-memory = { path = "../../storage-memory" }
common = { path = "../../plugins/common" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "time", "std", "local-time"] }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_qs = { workspace = true }
parking_lot = { workspace = true }
clap = { workspace = true }
problem_details = { workspace = true }
tower-http = { workspace = true, features = ["fs", "trace"] }
futures-util = { workspace = true, features = ["sink", "std"] }