[package]
name = "web"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "web"
path = "src/main.rs"

[dependencies]
source-downloader-core = { path = "../../source-downloader-core" }
source-downloader-sdk = { path = "../../source-downloader-sdk" }
storage-sqlite = { path = "../../storage-sqlite" }
common = { path = "../../plugins/common" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "time", "std", "local-time", "env-filter"] }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_qs = { workspace = true }
clap = { workspace = true }
problem_details = { workspace = true }
tower-http = { workspace = true, features = ["fs", "trace"] }
futures-util = { workspace = true, features = ["sink", "std"] }
build-info = { version = "0.0.42" }

[build-dependencies]
build-info-build = { version = "0.0.42" }